--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "snapsync",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
-  }
+    "name": "snapsync",
+    "version": "0.0.1",
+    "description": "",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+        "start": "node Backend/server.js",
+        "server": "nodemon Backend/server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/RedouaneKhlifah/snapSync"
+    },
+    "author": "Redouane khlifah , ",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.1.4",
+        "express": "^4.18.2",
+        "joi": "^17.11.0",
+        "express-async-handler": "^1.2.0",
+        "mongoose": "^7.2.4"
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.0",
+        "eslint": "^8.42.0",
+        "eslint-config-semistandard": "^17.0.0",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.7.0",
+        "eslint-plugin-only-warn": "^1.1.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "nodemon": "^2.0.22"
+    }
 }
+
