--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
         "type": "git",
         "url": "git+https://github.com/RedouaneKhlifah/snapSync"
     },
-    "author": "Redouane khlifah , ",
+    "author": "Redouane khlifah , Nouhaila Laaouina ",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^16.1.4",
         "express": "^4.18.2",
-        "joi": "^17.11.0",
         "express-async-handler": "^1.2.0",
-        "mongoose": "^7.2.4"
+        "joi": "^17.11.0",
+        "mongoose": "^7.2.4",
+        "typescript": "^5.2.2"
     },
     "devDependencies": {
+        "@types/express": "^4.17.21",
         "concurrently": "^8.2.0",
         "eslint": "^8.42.0",
         "eslint-config-semistandard": "^17.0.0",
