--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,56 @@
 {
-  "name": "snapsync",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@material-tailwind/react": "^2.1.4",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^4.4.5"
-  }
+    "name": "snapsync",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "test": "jest",
+        "coverage": "jest --collect-coverage",
+        "preview": "vite preview"
+    },
+    "jest": {
+        "testEnvironment": "jsdom",
+        "moduleNameMapper": {
+            "^.+\\.svg$": "jest-svg-transformer",
+            "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+        },
+        "setupFilesAfterEnv": [
+            "<rootDir>/src/test/setupTests.js"
+        ]
+    },
+    "dependencies": {
+        "@material-tailwind/react": "^2.1.4",
+        "axios": "^1.6.2",
+        "dotenv": "^16.3.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.1.3",
+        "react-router-dom": "^6.18.0",
+        "redux": "^4.2.1",
+        "redux-thunk": "^2.4.2"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.23.3",
+        "@babel/preset-react": "^7.23.3",
+        "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^14.1.2",
+        "@testing-library/user-event": "^14.5.1",
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
+        "@vitejs/plugin-react": "^4.0.3",
+        "@vitest/coverage-v8": "^0.34.6",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.45.0",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
+        "vite": "^4.4.5"
+    }
 }
