--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.1.4",
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
+        "jest": "^29.7.0",
         "joi": "^17.11.0",
         "mongoose": "^7.2.4",
         "react-icons": "^4.12.0",
@@ -28,6 +29,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "@vitest/ui": "^0.34.6",
         "concurrently": "^8.2.0",
         "eslint": "^8.42.0",
         "eslint-config-semistandard": "^17.0.0",
@@ -36,6 +38,8 @@
         "eslint-plugin-n": "^15.7.0",
         "eslint-plugin-only-warn": "^1.1.0",
         "eslint-plugin-promise": "^6.1.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest-svg-transformer": "^1.0.0",
         "nodemon": "^2.0.22"
     }
 }
